--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "lite-server",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dist": "mkdir dist && cp -R node_modules src dist"
+    "dist": "rm -rf dist && mkdir dist && cp -R src dist && cp -R build/contracts/* dist/"
   },
   "author": "",
   "license": "ISC",
